@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Run REST tests') {
             steps {
-                sh 'mvn clean verify -U'
+                sh 'mvn clean verify -U --illegal-access=warn --add-opens=java.base/java.lang=ALL-UNNAMED'
             }
         }
     }
